--- a/static/css/tech.css
+++ b/static/css/tech.css
@@ -34,7 +34,7 @@ nav {
 
 #navbar-logo {
     margin-left: 1.5vw;
-    width: 80%;
+    width: 100%;
     height: auto;
     padding-top: 1vh;
     padding-bottom: 1.25vh;
